--- a/Cinemtiyo/View/SearchTableViewCell.xib
+++ b/Cinemtiyo/View/SearchTableViewCell.xib
@@ -9,52 +9,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="143" id="KGk-i7-Jjw" customClass="SearchTableViewCell" customModule="Cinemtiyo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="457" height="143"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="124" id="KGk-i7-Jjw" customClass="SearchTableViewCell" customModule="Cinemtiyo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="378" height="124"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="457" height="143"/>
+                <rect key="frame" x="0.0" y="0.0" width="378" height="124"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="g8v-gf-VxR">
-                        <rect key="frame" x="0.0" y="0.0" width="457" height="1152"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie" translatesAutoresizingMaskIntoConstraints="NO" id="UTZ-4t-sCQ">
-                                <rect key="frame" x="0.0" y="0.0" width="130" height="1152"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="130" id="lX6-cE-0wE"/>
-                                    <constraint firstAttribute="height" constant="130" id="pyg-DA-b1b"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="41b-1M-Lty">
-                                <rect key="frame" x="138" y="0.0" width="319" height="1152"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Avangers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAO-NU-PT8">
-                                        <rect key="frame" x="0.0" y="0.0" width="71" height="1123.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6E-mb-k6S">
-                                        <rect key="frame" x="0.0" y="1131.5" width="88" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie" translatesAutoresizingMaskIntoConstraints="NO" id="DYF-0j-NcF">
+                        <rect key="frame" x="5" y="4" width="119" height="114"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="114" id="U5B-Qn-lou"/>
+                            <constraint firstAttribute="width" constant="119" id="Xdx-22-xfj"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJC-Yb-2Tj">
+                        <rect key="frame" x="128" y="30.5" width="246" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Avangers" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FtE-ln-a4b">
+                        <rect key="frame" x="129" y="5" width="74.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="g8v-gf-VxR" secondAttribute="bottom" id="Yfv-s2-zcv"/>
-                    <constraint firstAttribute="trailing" secondItem="g8v-gf-VxR" secondAttribute="trailing" id="Z6B-AP-okY"/>
-                    <constraint firstItem="g8v-gf-VxR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="iEH-Rr-NHI"/>
-                    <constraint firstItem="g8v-gf-VxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="iQS-kI-7Zu"/>
+                    <constraint firstItem="wJC-Yb-2Tj" firstAttribute="leading" secondItem="DYF-0j-NcF" secondAttribute="trailing" constant="4" id="3qw-gb-rJf"/>
+                    <constraint firstAttribute="trailing" secondItem="wJC-Yb-2Tj" secondAttribute="trailing" constant="4" id="4EZ-Fo-4mz"/>
+                    <constraint firstItem="wJC-Yb-2Tj" firstAttribute="top" secondItem="FtE-ln-a4b" secondAttribute="bottom" constant="5" id="SkV-7r-PNl"/>
+                    <constraint firstItem="FtE-ln-a4b" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cKS-Qs-PSE"/>
+                    <constraint firstItem="FtE-ln-a4b" firstAttribute="leading" secondItem="DYF-0j-NcF" secondAttribute="trailing" constant="5" id="ivR-g1-FI6"/>
+                    <constraint firstItem="DYF-0j-NcF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="wba-oB-ypb"/>
+                    <constraint firstItem="DYF-0j-NcF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="y4a-aC-fOd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-25" y="126"/>
+            <connections>
+                <outlet property="movieDescriptionLabel" destination="wJC-Yb-2Tj" id="aKQ-Cb-b9N"/>
+                <outlet property="movieImageView" destination="DYF-0j-NcF" id="o2P-Ng-GgB"/>
+                <outlet property="movieTitleLabel" destination="FtE-ln-a4b" id="Uen-Mi-HhD"/>
+            </connections>
+            <point key="canvasLocation" x="131.8840579710145" y="67.633928571428569"/>
         </tableViewCell>
     </objects>
     <resources>
